# header-scout

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.tr.md  pyproject.toml
headerscout/: checks.py  cli.py  scanner.py  triage.py  utils.py
