[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "headerscout"
version = "0.1.0"
description = "HTTP Security Header Scanner (CLI)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["requests"]

[project.scripts]
headerscout = "headerscout.cli:main"
